heatmap and pie chart added

--- a/src/app/badge-pie-chart/badge-pie-chart.component.html
+++ b/src/app/badge-pie-chart/badge-pie-chart.component.html
@@ -1,2 +1,3 @@
-<h4>Badge Piechart</h4>
+<h4 *ngIf="global">  <!-- <span *ngIf="!global">User</span> -->
+    <span *ngIf="global">Global</span> Badge Piechart</h4>
 <svg width="300" height="300" id="piechart"></svg>
