--- a/src/app/main-component/main-component.component.html
+++ b/src/app/main-component/main-component.component.html
@@ -71,8 +71,8 @@ line-height: 19px;display:none;
       <div class="col-lg-12" [hidden]="this.activePath!='badge'">
         <app-global-badgedata></app-global-badgedata>
        <app-global-badgeprobability-data></app-global-badgeprobability-data>
-       <!-- <app-badge-pie-chart></app-badge-pie-chart> -->
-       <!-- <app-badgeheatmap></app-badgeheatmap> -->
+       <app-badge-pie-chart></app-badge-pie-chart>
+       <app-badgeheatmap></app-badgeheatmap>
           </div>
           <div class="col-lg-12" [hidden]="this.activePath!='vpn'">
           <app-dashbord></app-dashbord>
