--- a/src/app/badgeheatmap/badgeheatmap.component.html
+++ b/src/app/badgeheatmap/badgeheatmap.component.html
@@ -1,2 +1,8 @@
 
-<div id="heatmap"></div>
+<div id="heatmap">
+    <h4 *ngIf="global">
+        <!-- <span *ngIf="!global">User</span> -->
+        <span *ngIf="global">Global</span>
+         Heat Map::</h4>
+    <div></div>
+</div>
